@@ -1683,6 +1683,11 @@ Tue Oct  7 07:45:09 CEST 2003
 Tue Oct  7 20:26:06 CEST 2003
 
 	- Fixed floating point exception in long=>numeric transformation.
+	
+Sun Oct 19 15:20:16 CEST 2003
+
+	- Need to check for both Informic compat modes when parsing include
+	  files.
 	- Set ecpg version to 3.0.0
 	- Set ecpg library to 4.0.0
 	- Set pgtypes library to 1.0.0
